# ipfx

./: .bumpversion.cfg  .gitattributes  .gitignore  .readthedocs.yml  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.md  HISTORY.rst  MANIFEST.in  Makefile  Pipfile  README.md  RELEASE_INSTRUCTIONS.md  TESTING.md  pull_request_template.md  pyproject.toml  pytest.ini  requirements-py3.6.txt  requirements-py3.9.txt  requirements-test.txt  requirements.txt  requirements_dev.txt  requirements_docs.txt  run_tests_with_docker.sh  setup.cfg  setup.py  test_requirements.txt  tox.ini
.circleci/: config.yml
.cookiecutter/: .cookiecutter.json  .cookiecutter.yaml  update.sh
.github/workflows/: deploy_release.yml  github-actions-ci.yml  nightly-onprem.yml
aibs/ipfx/: __init__.py  __main__.py  _schemas.py  aibs_data_set.py  core_feature_extract.py  data_set_features.py  ephys_data_set.py  ephys_extractor.py  ephys_features.py  experiment_features.py  plot_qc_figures.py  qc_features.py  stimulus_protocol_analysis.py
aibs/ipfx/mies_nwb/: lab_notebook_reader.py  mies_data_set.py  resource_file.py
aibs/ipfx/nwb/: convert_igor_nwb.py  nwb_publish.py
allensdk/ipfx/: _schemas.py  aibs_data_set.py  data_set_features.py  ephys_data_set.py  ephys_extractor.py  ephys_features.py  nwb_data_reader.py  nwb_reader.py  plot_qc_figures.py  qc_features.py  qc_protocol.py  state_assignment.py  stim_features.py  stimulus_ontology.json  stimulus_protocol_analysis.py
allensdk/ipfx/mies_nwb/: mies_data_set.py
allensdk/ipfx/x_to_nwb/: ABFConverter.py
data_release/: 2020-06-15_human_file_manifest.csv  2020-06-15_mouse_file_manifest.csv  20200611_aibs_patchseq_metadata_mouse.csv  20200625_patchseq_metadata_human_need_t-types.csv
docker/: Dockerfile  README.md  run_tests_with_docker.sh
docker/py311/: Dockerfile
docker/py36/: Dockerfile
docker/py39/: Dockerfile
docs/: Makefile  conf.py  data_sets.rst  download_data.rst  index.rst  installation.rst  make.bat  pipeline.rst  quick_start.rst  stimuli.rst  tutorial.rst  usage.rst
docs/aibs_sphinx/: .gitignore  buildPortalAssets.sh
docs/aibs_sphinx/templates/: globaltoc.html
docs/gallery/: README.txt  all_analysis.py  detect_spikes_single_sweep.py  detect_spikes_single_sweep_window.py  estimate_params.py  lsq_analysis.py  ramp_analysis.py  short_square_analysis.py
docs/gallery/analysis_examples/: README.txt  all_analysis.py  lsq_analysis.py  ramp_analysis.py  short_square_analysis.py
docs/gallery/data/: nwb2_H17.03.008.11.03.05.nwb
docs/gallery/qc_examples/: README.txt  sweep_qc.py
docs/gallery/spikes_examples/: README.txt  detect_spikes_single_sweep.py  detect_spikes_single_sweep_window.py  estimate_params.py  spike_train_features.py
ipfx/: __init__.py  _schemas.py  aibs_data_set.py  chirp.py  chirp_features.py  data_access.py  data_set_features.py  data_set_utils.py  deprecated.py  ephys_data_set.py  ephys_extractor.py  ephys_features.py  epochs.py  error.py  feature_extractor.py  feature_record.py  feature_vectors.py  hbg_dataset.py  json_utilities.py  lab_notebook_reader.py  lims_queries.py  logging_utils.py  mies_data_set.py  nwb_append.py  nwb_reader.py  offpipeline_utils.py  plot_qc_figures.py  py2to3.py  qc_criteria.json  qc_feature_evaluator.py  qc_feature_extractor.py  qc_features.py  qc_protocol.py  script_utils.py  spike_detector.py  spike_features.py  spike_train_features.py  stim_features.py  stimulus.py  stimulus_ontology.json  (+9 more)
ipfx/attach_metadata/: README.md  __main__.py  _schemas.py  metadata_sink.py
ipfx/attach_metadata/doc/: design.md
ipfx/attach_metadata/sink/: __init__.py  dandi_yaml_sink.py  (+2 more)
ipfx/data_release/: 2020-06-26_human_file_manifest.csv  20200625_patchseq_metadata_human.csv  20200625_patchseq_metadata_mouse.csv
ipfx/dataset/: README.md  create.py  ephys_data_inteface.py  ephys_data_interface.py  ephys_data_set.py  ephys_nwb_data.py  ephys_pipeline_dataset.py  hbg_nwb_data.py  labnotebook.py  mies_nwb_data.py
ipfx/defaults/: qc_criteria.json  stimulus_ontology.json
ipfx/x_to_nwb/: ABFConverter.py  DatConverter.py  NWBConverter.py  Readme.md  __init__.py  conversion_utils.py  hr_bundle.py  hr_nodes.py  hr_segments.py  hr_stimsetgenerator.py  hr_struct.py  hr_treenode.py  utils.py
tests/: .gitignore  __init__.py  conftest.py  fetch_file.py  helpers_for_tests.py  test_aibs_data_set.py  test_append_nwb.py  test_chirp.py  test_data_set_features.py  test_entry_points.py  test_ephys_data_set.py  test_ephys_extractor.py  test_ephys_features.py  test_epochs.py  test_extract_electrode_0.py  test_feature_record.py  test_feature_vector.py  test_hbg_dataset.py  test_ipfx.py  test_labnotebook.py  test_lims_queries.py  test_mies_data_set.py  test_mies_nwb2_specimens.csv  test_mies_nwb_pipeline_output.py  test_nwb1_nwb2_conversion.py  test_nwb_reader.py  test_nwb_utils.py  test_ontology.py  test_pipeline_output.py  test_pre_and_post_vm_delta.py  test_qc_features.py  test_run_feature_vector.py  test_specimens.csv  test_specimens.txt  test_spike_detector.py  test_spike_features.py  test_stim_features.py  test_stimulus_protocol_analysis.py  test_string_utils.py  test_subthresh_features.py  (+6 more)
tests/attach_metadata/: test_cli.py  test_dandi_yaml_sink.py  test_main.py  test_metadata_sink.py  test_nwb2_sink.py
tests/data/: .gitattributes  2018_03_20_0005.nwb  H18.03.315.11.11.01.05.nwb  Sst-IRES-CreAi14-395722.01.01.01.nwb  UntitledExperiment-2018_12_03_234957-compressed.nwb  Vip-IRES-Cre;Ai14(IVSCC)-226110.03.01.nwb  Vip-IRES-Cre;Ai14(IVSCC)-226110.03.01_ITC18USB_Dev_0-nwb-schema-2.9.0.nwb  Vip-IRES-Cre;Ai14(IVSCC)-236654.04.02.nwb  Vip-IRES-Cre;Ai14(IVSCC)-236654.04.02_ITC18USB_Dev_0-nwb-schema-2.9.0.nwb  fv_first_ap_dv_TEMP.npy  fv_isi_shape_TEMP.npy  fv_psth_TEMP.npy  fv_spiking_fast_trough_v_TEMP.npy  fv_spiking_peak_v_TEMP.npy  fv_spiking_upstroke_downstroke_ratio_TEMP.npy  fv_step_subthresh_TEMP.npy  fv_subthresh_depol_norm_TEMP.npy  valid_v2_MIES-NWBv2-0655f7e4.nwb
tests/dataset/: test_ephys_data_set.py  test_ephys_nwb_data.py  test_hbg_dataset.py  test_hbg_nwb_data.py  test_mies_nwb_data.py  test_nwb_reader.py
(+34 files in other folders)
